[adrian] - add transaction status by id and changing payment to enrollment
