# routes/enrollmentRouter.js
@@ -1,13 +1,13 @@
 const router = require('express').Router()
 const { Course } = require('../models')
-const userCourse = require('../controllers/userCourseController')
+const enrollment = require('../controllers/enrollmentController')
 const authenticate = require('../middlewares/authenticate')
 const checkRole = require('../middlewares/checkRole')
 const checkId = require('../middlewares/checkId')
 
 router
   .route('/')
-  .get(authenticate, checkRole('user'), userCourse.getUserCourses)
+  .get(authenticate, checkRole('user'), enrollment.getUserCourses)
 
 router
   .route('/:id')
@@ -15,7 +15,15 @@ router
     authenticate,
     checkRole('user'),
     checkId(Course),
-    userCourse.getUserCourse,
+    enrollment.getUserCourse,
   )
+
+router.post(
+  '/:id',
+  authenticate,
+  checkRole('user'),
+  checkId(Course),
+  enrollment.buyCourse,
+)
 
 module.exports = router
